@@ -3,6 +3,9 @@
 	* config/c6x/pr-support.c (__gnu_unwind_24bit): Correct logic for the
 	case where B3 isn't the return register.
 
+	* config/c6x/pr-support.c (pop_compact_frame, pop_frame): Correct
+	logic for doubleword pops.
+
 2011-10-25  Andreas Tobler  <andreast@fgznet.ch>
 
 	* config/rs6000/t-freebsd: Add wildcard.
